k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: expensy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ireneromero95/expensy-backend:a82faeb90d95dd87a829b6176bb26a7dabd05ce3
          ports:
            - containerPort: 8706
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: expensy
spec:
  selector:
    app: backend
  ports:
    - port: 8706
      targetPort: 8706
