k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: expensy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: expensy
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
